testsuite/tests/properties/invalid_node_builder/bad_parent.lkt
import common_empty

class Example: BaseExample {
    @lazy prop: EmptyNode = EmptyNode.builder().build(1)
}
